style: Typo fixed

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,9 @@
         margin: 0;
       }
     </style>
-    <title>Vite + React</title>
+    <title>Chakri Khujo
+      
+    </title>
   </head>
   <body>
     <div id="root"></div>
